--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,15 @@
 {
 	"compilerOptions": {
 	  "target": "ES2020",
-	  "module": "commonjs",
+	  "module": "ESNext",  // Change from commonjs to ESNext
 	  "lib": ["ES2020"],
-	  "outDir": "out",                       // <== COMPILED JS GOES HERE
+	  "outDir": "out",       // <== COMPILED JS GOES HERE
 	  "rootDir": "src",
 	  "strict": true,
 	  "esModuleInterop": true,
 	  "skipLibCheck": true
 	},
 	"include": ["src"],
-	"exclude": ["node_modules", ".vscode-test","src/test"]
-
+	"exclude": ["node_modules", ".vscode-test", "src/test"]
   }
   
